// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleImg should render background color 1`] = `
<span
  className="wrapper className"
  style={
    Object {
      "display": "flex",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    className="img className"
    data-src="src"
    data-srcset="srcSet"
    height={1000}
    sizes="sizes"
    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
    srcSet=""
    style={
      Object {
        "visibility": "hidden",
      }
    }
    width={100}
  />
  <Animate
    durationSeconds={1}
    endStyle={
      Object {
        "background": "red",
        "height": 1000,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    onCompleteStyle={
      Object {
        "display": "none",
      }
    }
    play={false}
    render={[Function]}
    startStyle={
      Object {
        "background": "red",
        "height": 1000,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
</span>
`;

exports[`SimpleImg should render correctly 1`] = `
<span
  className="wrapper className"
  style={
    Object {
      "display": "flex",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    className="img className"
    data-src="src"
    data-srcset="srcSet"
    height={1000}
    sizes="sizes"
    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
    srcSet=""
    style={
      Object {
        "visibility": "hidden",
      }
    }
    width={100}
  />
  <Animate
    durationSeconds={1}
    endStyle={
      Object {
        "background": "white",
        "height": 1000,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    onCompleteStyle={
      Object {
        "display": "none",
      }
    }
    play={false}
    render={[Function]}
    startStyle={
      Object {
        "background": "white",
        "height": 1000,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
</span>
`;

exports[`SimpleImg should render only span when place holder src is not supplied 1`] = `
<span
  className="wrapper className"
  style={
    Object {
      "display": "flex",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    className="img className"
    data-src="src"
    data-srcset="srcSet"
    height={1000}
    sizes="sizes"
    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
    srcSet=""
    style={
      Object {
        "visibility": "hidden",
      }
    }
    width={100}
  />
  <Animate
    durationSeconds={1}
    endStyle={
      Object {
        "background": "white",
        "height": 1000,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    onCompleteStyle={
      Object {
        "display": "none",
      }
    }
    play={false}
    render={[Function]}
    startStyle={
      Object {
        "background": "white",
        "height": 1000,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
</span>
`;

exports[`SimpleImg should render out as image data 1`] = `
<span
  className="wrapper className"
  style={
    Object {
      "display": "flex",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    className="img className"
    data-src="src"
    data-srcset="srcSet"
    height={1000}
    sizes="sizes"
    src="data:image//test"
    srcSet=""
    style={Object {}}
    width={100}
  />
  <Animate
    durationSeconds={1}
    endStyle={
      Object {
        "height": 1000,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
      }
    }
    onCompleteStyle={
      Object {
        "display": "none",
      }
    }
    play={false}
    render={[Function]}
  />
</span>
`;

exports[`SimpleImg should render out placeholder as image 1`] = `
<span
  className="wrapper className"
  style={
    Object {
      "display": "flex",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    className="img className"
    data-src="src"
    data-srcset="srcSet"
    height={1000}
    sizes="sizes"
    src="/test/image.jpg"
    srcSet=""
    style={Object {}}
    width={100}
  />
  <Animate
    durationSeconds={1}
    endStyle={
      Object {
        "height": 1000,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
      }
    }
    onCompleteStyle={
      Object {
        "display": "none",
      }
    }
    play={false}
    render={[Function]}
  />
</span>
`;
